✂️ Move PurgeCSS to tailwind.config.js

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -4,10 +4,13 @@
 
 @import "tailwindcss/utilities";
 
+@import "normalize.css";
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 body {
     font-family: 'Montserrat', sans-serif;
+    margin: 0;
 }
 
 .btn-tooltip {
