--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -137,6 +137,10 @@ input[type=number]::-webkit-inner-spin-button {
     appearance: none;
 }
 
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
 input[type=color]::-webkit-color-swatch-wrapper {
     @apply p-0;
 }
@@ -148,33 +152,6 @@ input[type=color]::-webkit-color-swatch {
 
 .input--number button:disabled {
     @apply opacity-25 cursor-not-allowed;
-}
-
-.vue-range-slider.slider-component {
-    padding: 0 !important;
-}
-
-.vue-range-slider.slider-component .slider .slider-dot.slider-always .slider-tooltip-wrap {
-    top: 100%;
-    transform: translate(-50%, 0);
-}
-
-.vue-range-slider.slider-component .slider-tooltip-wrap.slider-tooltip-top .slider-tooltip::before {
-    top: -10px;
-    bottom: 0;
-    transform: translate(-50%, 0) rotate(180deg);
-}
-
-.vue-range-slider.slider-component .slider {
-    @apply bg-gray-400;
-}
-
-.vue-range-slider.slider-component.slider-horizontal .slider-process {
-    @apply bg-blue-500;
-}
-
-.vue-range-slider.slider-component .slider-tooltip-wrap .slider-tooltip {
-    @apply bg-blue-500 border-blue-500;
 }
 
 .switch input {
@@ -209,11 +186,27 @@ input[type=range] {
     -webkit-appearance: none;
     width: 100%;
     margin: 0;
+    height: 11px;
+}
+input[type=range]:hover ~ div .thumb {
+    @apply border-blue-500;
 }
 
-input[type=range] + span {
+input[type=range]::-moz-focus-outer {
+    border: 0;
+}
+
+input[type=range] {
+    @apply w-full h-full block absolute z-20;
     top: 50%;
     transform: translateY(-50%);
+    background: transparent;
+}
+
+input[type=range] + div .thumb {
+    top: 50%;
+    transform: translateY(-50%);
+    transition: .2s;
 }
 input[type=range]:focus {
     outline: none;
@@ -222,7 +215,7 @@ input[type=range]::-webkit-slider-runnable-track {
     width: 100%;
     height: 8px;
     cursor: pointer;
-    background: rgba(77,161,255,.2);
+    background: transparent;
     @apply rounded-md;
 }
 input[type=range]::-webkit-slider-thumb {
@@ -231,10 +224,9 @@ input[type=range]::-webkit-slider-thumb {
     margin-top: -7px;
     width: 20px;
     height: 20px;
-    box-shadow: 0 4px 4px rgba(0,0,0,.04);
-    background: #fff;
+    background: transparent;
     border-radius: 59%;
-    border: 1px solid #D0D7DD;
+    border: none;
     position: relative;
     z-index: 1;
     transition: .2s;
@@ -244,7 +236,7 @@ input[type=range]::-moz-range-track {
     width: 100%;
     height: 8px;
     cursor: pointer;
-    background: rgba(77,161,255,.2);
+    background: transparent;
     border-radius: 6px;
 }
 input[type=range]::-moz-range-thumb {
@@ -253,29 +245,29 @@ input[type=range]::-moz-range-thumb {
     margin-top: -14px;
     width: 15px;
     height: 15px;
-    box-shadow: 0 4px 4px rgba(0,0,0,.04);
-    background: #fff;
+    background: transparent;
     border-radius: 59%;
-    border: 1px solid #D0D7DD;
+    border: none;
+    position: relative;
+    z-index: 2000;
+    transition: .2s;
 }
 input[type=range]::-ms-track {
     width: 100%;
     height: 8px;
     cursor: pointer;
-    background: rgba(77,161,255,.2);
+    background: transparent;
     border-radius: 6px;
 }
 input[type=range]::-ms-fill-lower {
-    background: #2a6495;
-    border: 0.2px solid #010101;
+    background: transparent;
+    border: none;
     border-radius: 2.6px;
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
 }
 input[type=range]::-ms-fill-upper {
-    background: #3071a9;
-    border: 0.2px solid #010101;
+    background: transparent;
+    border: none;
     border-radius: 2.6px;
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
 }
 input[type=range]::-ms-thumb {
     cursor: pointer;
@@ -283,13 +275,15 @@ input[type=range]::-ms-thumb {
     margin-top: -14px;
     width: 15px;
     height: 15px;
-    box-shadow: 0 4px 4px rgba(0,0,0,.04);
-    background: #fff;
+    background: transparent;
     border-radius: 59%;
-    border: 1px solid #D0D7DD;
+    border: none;
+    position: relative;
+    z-index: 1;
+    transition: .2s;
 }
 input[type=range]:hover::-webkit-slider-thumb  {
-    border: 1px solid rgba(77,161,255,1);
+    border: none;
 }
 
 select {
